fixed dropdown menu alignment

--- a/stylesheets/application.scss
+++ b/stylesheets/application.scss
@@ -345,12 +345,12 @@ ul {
         border-radius: 0;
         padding-bottom: 10px;
         padding-left: 20px;
-        margin-left: 0;
-        margin-top: -40px;
-        border-left: 2px solid $color_alto_approx;
-        border-right: 2px solid $color_alto_approx;
+        margin-left: 0px !important;
+        margin-top: -40px !important;
+        border-left: 2px solid #dcdada;
+        border-right: 2px solid #dcdada;
         box-shadow: none;
-        border-bottom: 2px solid $color_alto_approx;
+        border-bottom: 2px solid #dcdada;
         border-top: none;
         transition: all 0.5s;
         opacity: 0;
@@ -1038,3 +1038,12 @@ hr.job-hr {
 //         }
 //     }
 // }
+
+
+
+// WEBPACK FOOTER //
+// webpack:///stylesheets/Users/jpimenta/pheno-com/stylesheets/application.scss
+
+
+// WEBPACK FOOTER //
+// webpack:///stylesheets/Users/jpimenta/pheno-com/stylesheets/application.scss
